--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="main1">
@@ -61,6 +61,33 @@
           </div>
           <div class="downRight">
             <i class="ri-arrow-right-line"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="main2">
+      <div class="overlay">
+        <div class="left"></div>
+        <div class="right"></div>
+        <div class="container">
+          <div class="left"></div>
+          <div class="right">
+            <div class="text">
+              <h2>
+                The Euphoria Report: <br />
+                Mysterious Under the lee
+              </h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae
+                itaque delectus corrupti soluta. Rerum iste ipsum assumenda
+                consequuntur iure quam tenetur soluta accusantium eligendi?
+              </p>
+              <button>Read more</button>
+            </div>
+            <div class="icon">
+
+              =>
+            </div>
           </div>
         </div>
       </div>
