--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="main1">
@@ -85,12 +86,34 @@
               <button>Read more</button>
             </div>
             <div class="icon">
-
-              =>
+              <i class="ri-arrow-right-line"></i>
             </div>
           </div>
         </div>
       </div>
+    </div>
+    <div class="main3">
+      <div class="left">
+        <div class="left"></div>
+        <div class="right">
+          <h3 class="contact">Contacts</h3>
+          <h2>Let's get <br />acquainted</h2>
+          <div class="address">
+            <h3>Visit us</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          </div>
+          <div class="email">
+            <h3>Email</h3>
+            <p>example@gmail.com</p>
+          </div>
+          <div class="phone">
+            <h3>Phone</h3>
+            <p>+91123456789</p>
+          </div>
+          <button> Massage us</button>
+        </div>
+      </div>
+      <div class="right"></div>
     </div>
   </body>
 </html>
