--- a/index.html
+++ b/index.html
@@ -110,10 +110,34 @@
             <h3>Phone</h3>
             <p>+91123456789</p>
           </div>
-          <button> Massage us</button>
+          <button>Massage us</button>
         </div>
       </div>
       <div class="right"></div>
+    </div>
+    <div class="main4">
+      <div class="container">
+        <div class="left"></div>
+        <div class="right"></div>
+        <div class="overlay">
+          <div class="left">
+            <h2>
+              Beutifully Seented <br />
+              Plants for the Kitchen.
+            </h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Voluptate necessitatibus mollitia harum officiis ullam blanditiis
+              veritatis deleniti vitae provident laudantium.
+            </p>
+            <button>More Details</button>
+          </div>
+          <div class="mid"></div>
+          <div id="right">
+            <h2>Next <i class="ri-arrow-right-line"></i></h2>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
