--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       <div class="container">
         <div class="first">
           <div class="up">
-            <h2>Get Email's you'll love.</h2>
+            <h2 class="mail">Get email's you'll love.</h2>
            <div>
              <input type="text" name="email" placeholder="Email address" />
             <button>Sign Up</button>
