--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <div class="right"></div>
       <div class="overlay">
         <div class="nav">
-          <h3>ChirFlow</h3>
+          <h3><i class="ri-flower-fill"></i>ChirFlow</h3>
           <div class="navlinks">
             <a href="">Home</a>
-            <a href="">About</a>
+            <a href="">About Us</a>
             <a href="">Contact</a>
           </div>
         </div>
@@ -55,7 +55,9 @@
                 <i class="ri-instagram-fill"></i>
               </div>
               <div class="middleRight">
-                <div class="line"></div>
+                <div class="line">
+                  <div class="lineInside"></div>
+                </div>
                 <p>2-4</p>
               </div>
             </div>
@@ -139,7 +141,6 @@
         </div>
       </div>
     </div>
-
     <div class="main5">
       <div class="container">
         <div class="left"></div>
