--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-
+    <title>ChirFlow</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
@@ -63,7 +63,12 @@
             </div>
           </div>
           <div class="downRight">
-            <i class="ri-arrow-right-line"></i>
+            <img
+              width="50"
+              height="50"
+              src="https://img.icons8.com/ios-filled/50/long-arrow-right.png"
+              alt="long-arrow-right"
+            />
           </div>
         </div>
       </div>
@@ -88,7 +93,7 @@
               <button>Read more</button>
             </div>
             <div class="icon">
-              <i class="ri-arrow-right-line"></i>
+              <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/long-arrow-right.png" alt="long-arrow-right"/>
             </div>
           </div>
         </div>
@@ -191,13 +196,13 @@
         <div class="first">
           <div class="up">
             <h2 class="mail">Get email's you'll love.</h2>
-           <div>
-             <input type="text" name="email" placeholder="Email address" />
-            <button>Sign Up</button>
-           </div>
+            <div>
+              <input type="text" name="email" placeholder="Email address" />
+              <button>Sign Up</button>
+            </div>
           </div>
           <div class="down">
-            <h6>&copy;2025 Exclusively created by Daneshwar With Sheryians  </h6>
+            <h6>&copy;2025 Exclusively created by Daneshwar With Sheryians</h6>
           </div>
         </div>
         <div class="second">
@@ -206,8 +211,8 @@
           <p>FAQ</p>
           <p>Our Services</p>
           <p>Contact</p>
-          <p> Terms and</p>
-          <p> Conditions</p>
+          <p>Terms and</p>
+          <p>Conditions</p>
         </div>
         <div class="third">
           <h2>Featured</h2>
@@ -218,9 +223,9 @@
         </div>
         <div class="fourth">
           <div class="icons">
-             <i class="ri-facebook-circle-fill"></i>
-                <i class="ri-twitter-fill"></i>
-                <i class="ri-instagram-fill"></i>
+            <i class="ri-facebook-circle-fill"></i>
+            <i class="ri-twitter-fill"></i>
+            <i class="ri-instagram-fill"></i>
           </div>
         </div>
       </div>
